cargo-features = ["profile-overrides"]

[workspace]
members = [
    "assets_packer",
    "bins/client",
    "bins/server",
]

[profile.dev.overrides."*"]
opt-level = 3

#amethyst = { path = "../amethyst" }
[patch.'https://github.com/amethyst/amethyst']
amethyst = { git = "https://github.com/mvlabat/amethyst.git", rev = "49dc5b6" }
