[workspace]
members = [
    "assets_packer",
    "bins/client",
    "bins/server",
]

[profile.dev.package."*"]
opt-level = 3

#amethyst = { path = "../amethyst" }
#[patch.'https://github.com/amethyst/amethyst']
#amethyst = { git = "https://github.com/mvlabat/amethyst.git", rev = "49dc5b6" }

[patch.crates-io]
thread_profiler = { git = "https://github.com/mvlabat/thread_profiler.git", rev = "e52cc59" } # toggleable profiler
#amethyst = { git = "https://github.com/amethyst/amethyst.git", rev = "d31c82c" }
