[package]
name = "gv_client"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
bincode = "1.1.4"
clap = "2.33.0"
failure = "0.1.5"
laminar = "0.2.3"
lazy_static = "1.3.0"
log = "0.4.6"
num = "0.2.0"

[dependencies.gv_animation_prefabs]
path = "../../libs/animation_prefabs"

[dependencies.gv_core]
path = "../../libs/core"

[dependencies.gv_client_shared]
path = "../../libs/client_shared"

[dependencies.gv_game]
path = "../../libs/game"
features = ["client"]

[dependencies.amethyst]
version = "0.13.2"
features = ["nightly", "shader-compiler"]

# Bad news: https://github.com/rust-lang/cargo/issues/1197

#[target.'cfg(target_os = "macos")'.dependencies.amethyst]
#version = "0.13.2"
#features = ["metal"]

[target.'cfg(not(target_os = "macos"))'.dependencies.amethyst]
version = "0.13.2"
features = ["vulkan"]
