[package]
name = "gv_client"
version = "0.1.0"
authors = []
edition = "2018"

[features]
default = []
profiler = ["gv_game/profiler"]

[dependencies]
bincode = "1.1.4"
clap = "2.33.0"
derivative = "1.0.3"
failure = "0.1.5"
glsl-layout = "0.3.2"
lazy_static = "1.3.0"
log = "0.4.6"
num = "0.2.0"
rand = "0.6.5"

[dependencies.gv_animation_prefabs]
path = "../../libs/animation_prefabs"

[dependencies.gv_core]
path = "../../libs/core"

[dependencies.gv_client_shared]
path = "../../libs/client_shared"

[dependencies.gv_game]
path = "../../libs/game"
features = ["client"]

[dependencies.amethyst]
git = "https://github.com/amethyst/amethyst"
features = ["shader-compiler"]

# Bad news: https://github.com/rust-lang/cargo/issues/1197

#[target.'cfg(target_os = "macos")'.dependencies.amethyst]
#git = "https://github.com/amethyst/amethyst"
#features = ["metal"]

[target.'cfg(not(target_os = "macos"))'.dependencies.amethyst]
git = "https://github.com/amethyst/amethyst"
features = ["vulkan"]
