[package]
name = "gv_client"
version = "0.1.0"
authors = []
edition = "2018"

[features]
default = []
profiler = ["gv_game/profiler"]

[dependencies]
amethyst-imgui = { git = "https://github.com/Hugal31/amethyst-imgui", branch = "amethyst-v0.15" }
bincode = "1.1.4"
clap = "2.33.0"
derivative = "2.1.1"
failure = "0.1.5"
glsl-layout = "0.3.2"
lazy_static = "1.3.0"
log = "0.4.6"
num = "0.2.0"
rand = "0.6.5"
toml = "0.5.6"

[dependencies.gv_animation_prefabs]
path = "../../libs/animation_prefabs"

[dependencies.gv_core]
path = "../../libs/core"

[dependencies.gv_client_shared]
path = "../../libs/client_shared"

[dependencies.gv_game]
path = "../../libs/game"
features = ["client"]

[dependencies.amethyst]
version = "0.15"
features = ["shader-compiler"]

[target.'cfg(target_os = "macos")'.dependencies.amethyst]
version = "0.15"
features = ["metal"]

[target.'cfg(not(target_os = "macos"))'.dependencies.amethyst]
version = "0.15"
features = ["vulkan"]
