[package]
name = "ha_server"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
bincode = "1.1.4"
failure = "0.1.5"
fern = "0.5.8"
laminar = "0.2.3"
lazy_static = "1.3.0"
log = "0.4.6"
clap = "2.33.0"

[dependencies.ha_animation_prefabs]
path = "../../libs/animation_prefabs"

[dependencies.ha_core]
path = "../../libs/core"

[dependencies.ha_game]
path = "../../libs/game"
features = []

[dependencies.amethyst]
version = "0.13.2"
features = ["nightly", "empty"]

#[patch."https://github.com/amethyst/amethyst.git"]
#amethyst = { path = "../amethyst" }
