[package]
name = "gv_server"
version = "0.2.0"
authors = []
edition = "2018"

[features]
default = []
profiler = ["gv_game/profiler"]

[dependencies]
bincode = "1.1.4"
clap = "2.33.0"
failure = "0.1.5"
fern = "0.5.8"
lazy_static = "1.3.0"
log = "0.4.6"
toml = "0.5.6"

[dependencies.gv_animation_prefabs]
path = "../../libs/animation_prefabs"

[dependencies.gv_core]
path = "../../libs/core"

[dependencies.gv_game]
path = "../../libs/game"
features = []

[dependencies.amethyst]
version = "0.15"
features = ["empty"]
