[package]
name = "animation_prefabs"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies.amethyst]
git = "https://github.com/amethyst/amethyst.git"
rev = "7abfcfc"
features = ["nightly"]

[target.'cfg(target_os = "macos")'.dependencies.amethyst]
git = "https://github.com/amethyst/amethyst.git"
rev = "7abfcfc"
features = ["metal"]

[dependencies]
serde = "1.0.91"
serde_derive = "1.0.91"
