[package]
name = "animation_prefabs"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies.amethyst]
version = "0.12.0"
features = ["nightly"]

# Bad news: https://github.com/rust-lang/cargo/issues/1197

#[target.'cfg(target_os = "macos")'.dependencies.amethyst]
#version = "0.12.0"
#features = ["metal"]

[dependencies]
serde = "1.0.91"
serde_derive = "1.0.91"
