[package]
name = "ha_client_shared"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
log = "0.4.6"
directories = "1.0.2"
num = "0.2.0"
ron = "0.5.1"
serde = "1.0.91"
serde_derive = "1.0.91"
shred = "0.7"
shred-derive = "0.5"

[dependencies.ha_animation_prefabs]
path = "../../libs/animation_prefabs"

[dependencies.ha_core]
path = "../core"

[dependencies.amethyst]
version = "0.12.0"
features = ["nightly"]

# Bad news: https://github.com/rust-lang/cargo/issues/1197

#[target.'cfg(target_os = "macos")'.dependencies.amethyst]
#version = "0.12.0"
#features = ["metal"]
