[package]
name = "ha_client_shared"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
log = "0.4.6"
directories = "1.0.2"
ron = "0.5.1"
serde = "1.0.91"
serde_derive = "1.0.91"

[dependencies.ha_animation_prefabs]
path = "../../libs/animation_prefabs"

[dependencies.ha_core]
path = "../core"

[dependencies.amethyst]
version = "0.13.0"
git = "https://github.com/mvlabat/amethyst.git"
branch = "hide-hierarchy-system-desc"
