[package]
name = "gv_client_shared"
version = "0.2.4"
authors = []
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
log = "0.4.6"
directories = "1.0.2"
ron = "0.5.1"
serde = "1.0.101"
serde_derive = "1.0.101"

[dependencies.gv_animation_prefabs]
path = "../../libs/animation_prefabs"

[dependencies.gv_core]
path = "../core"

[dependencies.amethyst]
version = "0.15"
