[package]
name = "ha_game"
version = "0.1.0"
authors = []
edition = "2018"

[features]
default = []
client = ["ha_client_shared"]

[dependencies.amethyst]
version = "0.12.0"
features = ["nightly"]

# Bad news: https://github.com/rust-lang/cargo/issues/1197

#[target.'cfg(target_os = "macos")'.dependencies.amethyst]
#version = "0.12.0"
#features = ["metal"]

[dependencies]
lazy_static = "1.3.0"
log = "0.4.6"
num = "0.2.0"
rand = "0.6.5"
serde = "1.0.91"
serde_derive = "1.0.91"
shred = "0.7"
shred-derive = "0.5"
shrinkwraprs = "0.2.1"

[dependencies.ha_animation_prefabs]
path = "../animation_prefabs"

[dependencies.ha_client_shared]
path = "../client_shared"
optional = true

[dependencies.ha_core]
path = "../core"
