[package]
name = "gv_game"
version = "0.1.0"
authors = []
edition = "2018"

[features]
default = []
client = ["gv_client_shared"]

[dependencies.amethyst]
git = "https://github.com/amethyst/amethyst"

[dependencies]
bincode = "1.1.4"
lazy_static = "1.3.0"
log = "0.4.6"
num = "0.2.0"
rand = "0.6.5"
shrinkwraprs = "0.2.1"

[dependencies.gv_animation_prefabs]
path = "../animation_prefabs"

[dependencies.gv_client_shared]
path = "../client_shared"
optional = true

[dependencies.gv_core]
path = "../core"
